# shape-printer

./: CMakeLists.txt  README.md
doc/: Extensible Design for the Output Method of PrintShape.md  output.puml  package.puml  shape.puml
inc/: BMP.h  BMPCreator.h  Cross.h  Diamond.h  Image.h  PrintShape.h  Shape.h  StreamOut.h
src/: BMP.cpp  BMPCreator.cpp  Cross.cpp  Diamond.cpp  Image.cpp  PrintShape.cpp  Shape.cpp  StreamOut.cpp  main.cpp
test/: PrintShapeTest.cpp
tests/: CMakeLists.txt  test_BMP.cpp  test_BMPCreator.cpp  test_Diamond.cpp  test_Image.cpp  test_PrintShape.cpp  test_StreamOut.cpp
